# Regex

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: tag_manage.py  tags.py
core/: autocomplete.py
core/db/: Core.py  Tags.py
