[tool.poetry]
name = "regex"
version = "0.1.0"
description = ""
authors = ["Nemika__ <mmnemijus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.5.2"
pymongo = "^4.2.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
